components/Input/style.module.scss
@import "styles/utils";

.inputWrapper {
  position: relative;
  display: flex;

  &.hasIcon {
    .input {
      padding: 6px 17.48px 6px 40px;
    }
  }

  &.error {
    .input {
      border-color: #E17052 !important;
    }
  }

  .icon {
    position: absolute;
    top: 50%;
    left: 19.26px;
    transform: translateY(-50%);
  }

  .input {
    position: relative;
    width: 100%;
    height: 48px;
    font-weight: 700;
    font-size: 24px;
    line-height: 36px;
    text-align: right;
    color: #00474B;
    background: #F3F9FA;
    border-radius: 5px;
    border: 2px solid #F3F9FA;
    outline: none;
    padding: 6px 17.48px 6px 6px;

    @include media(">desktop") {
      padding: 6px 17px 6px 17px;
    }

    &::placeholder {
      color: rgba(0, 71, 75, 0.35);
    }

    &:focus {
      border: 2px solid #26C2AE;
    }

    &[type="number"] {
      &::-webkit-inner-spin-button,
      &::-webkit-outer-spin-button {
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
      }
    }
  }
}

